--- a/src/Pages/UserProfile/AboutProfile/style.sass
+++ b/src/Pages/UserProfile/AboutProfile/style.sass
@@ -19,8 +19,19 @@
   &__not-required-params
 
   &__link
+    white-space: nowrap
+    text-overflow: ellipsis
+    overflow: hidden
+    word-wrap: break-word
+    //-webkit-box-orient: vertical
+    //-moz-box-orient: vertical
+    //-o-box-orient: vertical
+    //-webkit-line-clamp: 1
+    //-moz-line-clamp: 1
+    //-o-line-clamp: 1
     a
      color: #337ab7 !important
+
 
   &__link:hover
     a
