--- a/src/Pages/UserProfile/ProfileHeader/style.sass
+++ b/src/Pages/UserProfile/ProfileHeader/style.sass
@@ -32,7 +32,8 @@
     max-width: 425px
     border-radius: 4px
     box-shadow: 0 2px 4px rgba(0,0,0,.3)
-
+    +r(sm)
+      margin: 0
 
   &__join
     padding: 14px 20px
